--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
-*.class
+#################
+## Eclipse
+#################
 
-# Package Files #
-*.jar
-*.war
-*.ear
+*.pydevproject
+.project
+.metadata
+bin/
+tmp/
+*.tmp
+*.bak
+*.swp
+*~.nib
+local.properties
+.classpath
+.settings/
+.loadpath
+nbproject/
+build/
+dist/
+store/
